<resources>
    <string name="app_name">Sport Center</string>
    <string name="title_activity_register">Register</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Email">ایمیل</string>
    <string name="password">رمز عبور</string>
    <string name="Name">نام</string>
    <string name="lastName">نام خانوادگی</string>
    <string name="EmailS">ایمیل</string>
    <string name="rePass">تکرار رمز عبور</string>
    <string name="laws">قوانین را مطالعه کردم و میپذیرم</string>
    <string name="SignUp">ثبت نام</string>
    <string name="Login">ورود</string>
    <string name="my_image"> Team </string>
    <string name="open_drawer"> open </string>
    <string name="close_drawer"> close</string>
    <string name="description">description</string>
    <string name="heading">heading</string>
    <string name="favorite_team">تیم مورد علاقه</string>
    <string-array name="favorite_team">
        <item>انتخاب کنید ...</item>
        <item>پرسپولیس</item>
        <item>استقلال تهران</item>
    </string-array>


    <!-- Formations -->
    <string name="Formation_352">ترکیب سه-پنج-دو</string>
    <string name="Formation_433">ترکیب چهار-سه-سه</string>
    <string name="Formation_442">ترکیب چهار-چهار-دو</string>
    <string name="Formation_532">ترکیب پنج-سه-دو</string>
    <string name="_40">40%</string>
    <string name="_20">20%</string>
    <string name="mark">امتیاز</string>
    <string name="setting">تنظیمات</string>
    <string name="shop">خرید</string>
    <string name="support">حمایت از تیم</string>
    <string name="view">معرفی</string>
    <string name="developers">سازندگان</string>
    <string name="Log_out">خروج</string>
</resources>
