<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:title="@string/setting"
            android:id="@+id/InboxId"
            android:icon="@drawable/ic_setting"/>

        <item
            android:title="@string/shop"
            android:id="@+id/starId"
            android:icon="@drawable/ic_shop"/>

        <item
            android:title="@string/support"
            android:id="@+id/draftId"
            android:icon="@drawable/ic_support"/>

        <item
            android:id="@+id/LogOut"
            android:icon="@drawable/ic_exit"
            android:title="خروج از حساب کاربری"
           />

    </group>

    <item android:title="@string/view">

        <menu>

            <item
                android:title="@string/developers"
                android:icon="@drawable/ic_developer"
                android:id="@+id/developer"
                />


        </menu>

    </item>



</menu>